Properly handle permission adding and removing

--- a/public/css/ctrlo-bootstrap.css
+++ b/public/css/ctrlo-bootstrap.css
@@ -1445,6 +1445,15 @@ small.search_term {
 #current-permissions .permission.edit button.edit {
   display: none; }
 
+#current-permissions button.delete {
+  display: none; }
+
+#current-permissions .permission {
+  margin-bottom: 1em; }
+
+#current-permissions .permission.edit button.delete {
+  display: inline; }
+
 #current-permissions .legend dd,
 #current-permissions .legend dt {
   display: inline-block; }
