--- a/sass/ctrlo-bootstrap.scss
+++ b/sass/ctrlo-bootstrap.scss
@@ -1609,6 +1609,7 @@ small.search_term {
 #current-permissions .permission .group-name {
     font-size: 1.2em;
     margin-top: 0;
+    display: inline-block;
 }
 
 #current-permissions .configuration .tooltip {
