--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -78,174 +78,19 @@
 
     </head>
 
-    <body>
-        <div id="wrapper">
+    [% PROCESS snippets/main_sections.tt %]
+
+    <body class="page-[% page %]">
+        <header role="banner">
         [% IF header AND NOT page_as_mech %]
             <p class="text-center">[% header %]</p>
         [% END %]
-        <div class="container-fluid">
-            [% UNLESS page == "login" OR page == "invalidsite" OR page_as_mech %]
-                <div class="navbar navbar-default" role="navigation">
-                    <div class="collapse navbar-collapse" id="main-navbar">
-                        <ul class="nav navbar-nav">
-                            <li class="dropdown">
-                                <button type="button" class="dropdown-toggle" data-toggle="dropdown" aria-label="Table menu"
-                                    aria-expanded="false" aria-haspopup="true" aria-controls="table-menu">
-                                    <span><i aria-hidden="true" class="fa fa-cog fa-lg use-icon-font"></i></span>
-                                </button>
-                                <ul class="dropdown-menu" id="ciog-menu">
-                                    <li [% IF 0 %]class="active"[% END %]>
-                                        <a href="[% url.page %]/config/">Manage homepage</a>
-                                    </li>
-                                    <li [% IF 0 %]class="active"[% END %]>
-                                        <a href="[% url.page %]/file/">Manage uploads</a>
-                                    </li>
-                                    <li [% IF 0 %]class="active"[% END %]>
-                                        <a href="[% url.page %]/audit/">User logs</a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li class="dropdown">
-                                <button type="button" class="dropdown-toggle" data-toggle="dropdown" aria-label="Table menu"
-                                    aria-expanded="false" aria-haspopup="true" aria-controls="table-menu">
-                                    <span>[% instance_name | html_entity %]</span>
-                                    <span class="caret"></span>
-                                </button>
-                                <ul class="dropdown-menu" id="table-menu">
-                                    [% FOREACH instance IN instances %]
-                                        <li [% IF instance.id == instance_id %]class="active"[% END %]>
-                                            <a href="?instance=[% instance.id %]"
-                                            >[% instance.name | html_entity %]</a>
-                                        </li>
-                                    [% END %]
-                                </ul>
-                            </li>
-                        </ul>
-                        <ul class="nav navbar-nav navbar-right">
-                            <li class="dropdown">
-                            <button type="button" class="dropdown-toggle" data-toggle="dropdown" aria-label="User menu"
-                                aria-expanded="false" aria-haspopup="true" aria-controls="user-menu">
-                                <span>[% user.value | html_entity %]</span>
-                                <span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu" id="user-menu">
-                                <li><a href="[% url.page %]/account/detail">My details</a></li>
-                                <li class="divider"></li>
-                                <li><a href="[% url.page %]/logout">Logout</a></li>
-                            </ul>
-                            </li>
-                        </ul>
-                    </div><!--/.nav-collapse -->
-                </div>
-                <div class="navbar navbar-default" role="navigation">
-                    <div class="collapse navbar-collapse" id="main-navbar">
-                        <ul class="nav navbar-nav">
-                            <li><a href="[% url.page %]/"><i aria-hidden="true" class="fa fa-home fa-lg use-icon-font"></i></a></li>
-                            [% IF user.permission.layout %]
-                                <li class="dropdown">
-                                    <button type="button" id="admin-menu" class="dropdown-toggle" 
-                                        data-toggle="dropdown" aria-controls="admin-menu-options" aria-expanded="false" aria-haspopup="true">
-                                        <span>Table editor</span>
-                                        <span class="caret"></span>
-                                    </button>
-                                    <ul class="dropdown-menu" aria-labelledby="admin-menu" id="admin-menu-options">
-                                        <li [% IF page=="table/0" %]class="active"[% END %]><a href="[% url.page %]/table/0">Add a table</a></li>
-                                        <li [% IF page=="table" %]class="active"[% END %]><a href="[% url.page %]/table/">Manage tables</a></li>
-                                        <li class="divider"></li>
-                                        <li [% IF page=="layout" %]class="active"[% END %]><a href="[% url.page %]/layout/">Manage fields</a></li>
-                                        <li [% IF page=="layout/0" %]class="active"[% END %]><a href="[% url.page %]/layout/0">Add a field</a></li>
-                                    </ul>
-                                </li>
-                            [% END %]
-                            [% IF user.permission.useradmin %]
-                                <li class="dropdown">
-                                    <button type="button" id="admin-menu" class="dropdown-toggle" 
-                                        data-toggle="dropdown" aria-controls="admin-menu-options" aria-expanded="false" aria-haspopup="true">
-                                        <span>Users</span>
-                                        <span class="caret"></span>
-                                    </button>
-                                    <ul class="dropdown-menu" aria-labelledby="admin-menu" id="admin-menu-options">
-                                        <li [% IF page=="user" %]class="active"[% END %]><a href="[% url.page %]/user/">Manage users</a></li>
-                                        <li [% IF page=="" %]class="active"[% END %]><a href="[% url.page %]/user/0">Add a user</a></li>
-                                        <li><a href="" data-toggle="modal" data-target="#modal-sendemail">Email users</a></li>
-                                        <li><a href="/user?download">Download users</a></li>
-                                        <li class="divider"></li>
-                                        <li [% IF page=="group" %]class="active"[% END %]><a href="[% url.page %]/group/">Manage groups</a></li>
-                                        <li [% IF page=="" %]class="active"[% END %]><a href="[% url.page %]/group/0">Add a group</a></li>
-                                    </ul>
-                                </li>
-                            [% END %]
-                            <li class="dropdown">
-                                <button type="button" id="admin-menu" class="dropdown-toggle" 
-                                    data-toggle="dropdown" aria-controls="admin-menu-options" aria-expanded="false" aria-haspopup="true">
-                                    <span>Records</span>
-                                    <span class="caret"></span>
-                                </button>
-                                <ul class="dropdown-menu" aria-labelledby="admin-menu" id="admin-menu-options">
-                                    <li [% IF page=="data" %]class="active"[% END %]><a href="[% url.page %]/data">See records</a></li>
-                                    [% IF user_can_create %]
-                                        <li [% IF page=="" %]class="active"[% END %]><a href="[% url.page %]/edit/">Add a record</a></li>
-                                    [% END %]
-                                    [% IF user.permission.link AND show_link %]
-                                        <li [% IF page=="" %]class="active"[% END %]><a href="[% url.page %]/link/">Add a linked record</a></li>
-                                    [% END %]
-                                    [% IF user_can_approve %]
-                                        [% IF approve_waiting %][% appcount = " (" _ approve_waiting _ ")" %][% END %]
-                                        <li class="divider"></li>
-                                        <li [% IF page=="approval" %]class="active"[% END %]><a href="[% url.page %]/approval/">Approve records[% appcount %]</a></li>
-                                    [% END %]
-                                    <li class="divider"></li>
-                                    <li [% IF page=="import" %]class="active"[% END %]><a href="[% url.page %]/import/">Import records</a></li>
-                                    [% IF viewtype == "table" AND records.size AND user.permission.download %]
-                                        <li><a href="[% url.page %]/data?download">Download records in current view</a></li>
-                                    [% END %]
-                                    [% IF search %]
-                                        [% sel_type = "in this search" %]
-                                    [% ELSE %]
-                                        [% sel_type = "in this view" %]
-                                    [% END %]
-                                    [% IF user.permission.bulk_update %]
-                                        <li role="presentation"><a role="menuitem" tabindex="-1" href="/bulk/update/">Update all records [% sel_type %]...</a></li>
-                                        <li role="presentation"><a role="menuitem" tabindex="-1" href="/bulk/clone/">Clone all records [% sel_type %]...</a></li>
-                                    [% END %]
-                                    [% IF user.permission.delete %]
-                                        <li role="presentation"><a role="menuitem" tabindex="-1" data-toggle="modal" data-target="#modal_delete" style="cursor: pointer">Delete all records [% sel_type %]...</a>
-                                    [% END %]
-                                </ul>
-                            </li>
-                            <li class="dropdown">
-                                <button type="button" id="admin-menu" class="dropdown-toggle" 
-                                    data-toggle="dropdown" aria-controls="admin-menu-options" aria-expanded="false" aria-haspopup="true">
-                                    <span>Views</span>
-                                    <span class="caret"></span>
-                                </button>
-                                <ul class="dropdown-menu" aria-labelledby="admin-menu" id="admin-menu-options">
-                                    [% IF user.permission.view_create %]
-                                        <li [% IF page=="view/0" %]class="active"[% END %]><a href="[% url.page %]/view/0">Add a view</a></li>
-                                    [% END %]
-                                    [% IF v %]
-                                        [% IF !v.global OR user.permission.layout %]
-                                            <li [% IF page=="view" %]class="active"[% END %]><a href="/view/[% v.id %]">Edit current view</a></li>
-                                        [% END %]
-                                        <li [% IF page=="view/clone" %]class="active"[% END %]><a href="/view/0?clone=[% v.id %]">Copy current view</a></li>
-                                    [% END %]
-                                    <li class="divider"></li>
-                                    <li [% IF page=="graph" %]class="active"[% END %]><a href="[% url.page %]/graph/">Manage graphs</a></li>
-                                    <li [% IF page=="graph/0" %]class="active"[% END %]><a href="[% url.page %]/graph/0">Add a graph</a></li>
-                                    <li [% IF page=="account/graph" %]class="active"[% END %]><a href="[% url.page %]/account/graph/">My graphs</a></li>
-                                    <li class="divider"></li>
-                                    <li role="presentation"><a href="" role="menuitem" tabindex="-1" data-toggle="modal" data-target="#modal_rewind">Historic view...</a></li>
-                                    [% IF v %]
-                                        <li role="presentation"><a href="" role="menuitem" tabindex="-1" data-toggle="modal" data-target="#modal_alert">Set up an alert</a></li>
-                                    [% END %]
-                                </ul>
-                            </li>
-                        </ul>
-                    </div><!--/.nav-collapse -->
-                </div>
 
-            [% END %]
-
+        [% 
+            UNLESS page == "login" OR page == "invalidsite" OR page_as_mech;
+                PROCESS navigation;
+            END 
+        %]
             [% FOR message IN messages %]
                 <div role="alert" class="alert alert-[% message.bootstrap_color %]">
                     [% IF message.inClass("html") %]
